--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>LayerDE</h1>
+<p>You found my tiny homepage. I don't wanna do great stuff on in. I'll host a few informations about my projects and my coding style. If you think you want me to work for you feel free to write me.</p>
 </body>
 </html>
