--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>LayerDE</h1>
-<p>You found my tiny homepage. I don't wanna do great stuff on in. I'll host a few informations about my projects and my coding style. If you think you want me to work for you feel free to write me.\n\nPAULCHEN IST GEIL AUF LAYERDE</p>
+<p>You found my tiny homepage. I don't wanna do great stuff on in. I'll host a few informations about my projects and my coding style. If you think you want me to work for you feel free to write me.<br>PAULCHEN IST GEIL AUF LAYERDE</p>
 </body>
 </html>
