--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>LayerDE</h1>
-<a href="https://layerde.github.io/build/text.hex">text.hex</a>
+<a href="https://layerde.github.io/build/text.html">text.hex</a>
 <p>You found my tiny homepage. I don't wanna do great stuff on in. I'll host a few informations about my projects and my coding style. If you think you want me to work for you feel free to write me.<br>PAULCHEN IST GEIL AUF LAYERDE</p>
 </body>
 </html>
